# Test

./: README.md  main.py  pyproject.toml
app/: db.py  main.py  pdf_index.py
app/database/: db.py
app/routers/: actions.py  batches.py  board.py  health.py  items.py  planning.py  summary.py  types.py  view_data.py
app/services/: planning_service.py
app/static/: style.css
app/templates/: batch.html  board.html  issues.html  item.html  laser.html  layout.html  project.html  project_import.html  stage.html  type.html  type_planning.html
backend/: database.py  main.py  models.py
backend/services/: excel_parser.py  production.py
database/: init_db.py  schema.sql
frontend/: index.html  package.json
frontend/public/: index.html
frontend/src/: App.jsx  api.js
frontend/src/components/: UploadModal.jsx
scripts/: add_test_item.py  add_test_route.py  add_test_type.py  batch_status_summary.py  check_data.py  create_test_batch_items.py  create_test_batch_stages.py  create_test_batches.py  create_test_locations.py  create_test_transfer.py  progress_test_stage.py
tests/: test_pdf_index.py  test_project_import.py
